Improved the navbar

--- a/index.html
+++ b/index.html
@@ -77,40 +77,40 @@
 			<nav class="">
 				<div class="hidden w-full lg:block z-2" id="navbar">
 					<ul
-						class="w-[100vw] h-1/2 top-0 right-0 p-4 text-center space-y-8 lg:space-y-0 lg:space-x-3 lg:static lg:w-auto flex flex-col rounded-lg border border-gray-100 items-center lg:bg-transparent lg:border-0 lg:flex-row justify-center"
+						class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-sm space-y-8 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-start lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-center"
 					>
 						<li>
 							<a
 								href="./index.html"
-								class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+								class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
 								>Home</a
 							>
 						</li>
 						<li>
 							<a
 								href="#About"
-								class="  text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+								class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
 								>About Us</a
 							>
 						</li>
 						<li>
 							<a
 								href="./news.html"
-								class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+								class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
 								>Pet News</a
 							>
 						</li>
 						<li>
 							<a
 								href="./blog.html"
-								class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+								class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
 								>Blogs</a
 							>
 						</li>
 						<li>
 							<a
 								href="./donate.html"
-								class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+								class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
 								>Donate</a
 							>
 						</li>
@@ -122,13 +122,13 @@
 							>
 								<a
 									@mouseover="open = true"
-									class="p-3 text-custom-heading flex font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+									class="text-custom-heading flex font-bold hover:underline underline-offset-4 turn-red-hover navbar-item w-full"
 								>
 									Support Us
 									<svg
 										xmlns="http://www.w3.org/2000/svg"
-										width="18px"
-										height="18px"
+										width="14px"
+										height="14px"
 										fill="none"
 										viewBox="0 0 24 24"
 										stroke="currentColor"
@@ -158,7 +158,7 @@
 						<li>
 							<a
 								href="./reportstary.html"
-								class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+								class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
 								>SOS Report</a
 							>
 						</li>
@@ -166,7 +166,7 @@
 						<li>
 							<a href="#contact">
 								<button
-									class="inline-flex items-center bg-header-orange-light border-0 py-4 px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-0"
+									class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-sm px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-0"
 								>
 									Contact Us
 									<svg
