--- a/index.html
+++ b/index.html
@@ -843,14 +843,14 @@
 				<div class="flex-1 flex flex-col items-center justify-center">
 					<div class="text-2xl">Follow us on</div>
 					<div class="flex mt-2 flex-row space-x-3 my-0">
-						<div>
+						<div id="icons">
 							<a href="#" class="w-5 ml-3">
 								<!-- Facebook icon -->
 								<svg
 									xmlns="http://www.w3.org/2000/svg"
 									width="40"
 									height="40"
-									class="fill-white"
+									class="fill-white hover:text-grey-500 transition-colors duration-300"
 									viewBox="0 0 20 20"
 								>
 									<path
@@ -859,7 +859,7 @@
 								</svg>
 							</a>
 						</div>
-						<div>
+						<div id="icons">
 							<a href="#" class="w-10 ml-3 mr-3">
 								<!-- Instagram icon -->
 								<svg
@@ -875,7 +875,7 @@
 								</svg>
 							</a>
 						</div>
-						<div>
+						<div id="icons">
 							<a
 								href="https://github.com/akshitagupta15june/PetMe"
 								target="_blank"
