hover for icons

--- a/index.html
+++ b/index.html
@@ -850,7 +850,7 @@
 									xmlns="http://www.w3.org/2000/svg"
 									width="40"
 									height="40"
-									class="fill-white hover:text-grey-500 transition-colors duration-300"
+									class="fill-white"
 									viewBox="0 0 20 20"
 								>
 									<path
