--- a/blog.html
+++ b/blog.html
@@ -90,7 +90,7 @@
 
 
 
-          <li><a href="#contact">
+          <li><a href="./index.html#contact">
               <button
                 class="inline-flex items-center bg-header-orange-light border-0 py-4 px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-0">
                 Contact Us
