--- a/index.html
+++ b/index.html
@@ -88,6 +88,13 @@
 						</li>
 						<li>
 							<a
+								href="#adopt"
+								class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+								>Meet Pets</a
+							>
+						</li>
+						<li>
+							<a
 								href="#About"
 								class="  text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
 								>About Us</a
