file upload only image type bug fixed
In donate form page, the image upload section has not any contraint that the file should be only image.

--- a/donate.html
+++ b/donate.html
@@ -246,7 +246,7 @@
                         <span class="text-blue-600 underline">Browse</span>
                       </span>
                     </span>
-                    <input type="file" name="file_upload" class="hidden" />
+                    <input type="file" name="file_upload" class="hidden" accept="image/*"/>
                   </label>
                 </div>
               </div>
