changed submit btn

--- a/volunteer.html
+++ b/volunteer.html
@@ -204,7 +204,7 @@
                             </span>
                         </div>
                         <div class="p-4 w-full">
-                            <button type="submit"
+                            <button type="submit" id="vol-btn"
                                 class="flex mx-auto text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">
                                 Submit
                             </button>
