--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 								>
 									<a
 										href="volunteer.html"
-										class="block px-4 py-2 text-sm text-gray-300 text-gray-700 hover:bg-gray-400 hover:text-white"
+										class="block px-4 py-2 text-sm  text-gray-700 hover:bg-gray-400 hover:text-white"
 										>Become a Volunteer</a
 									>
 								</div>
