--- a/news.html
+++ b/news.html
@@ -65,7 +65,7 @@
 
                                 <div x-show="open" class="z-20 absolute -left-1 w-[7.5rem] py-2 bg-gray-100 rounded-md shadow-xl">
 
-                                    <a href="volunteer.html" class=" block px-4 py-2 text-sm text-gray-300 text-gray-700 hover:bg-gray-400 hover:text-white">Become
+                                    <a href="volunteer.html" class=" block px-4 py-2 text-sm  text-gray-700 hover:bg-gray-400 hover:text-white">Become
                         a Volunteer</a>
 
                                 </div>
