--- a/index.html
+++ b/index.html
@@ -115,6 +115,13 @@
 							>
 						</li>
 						<li>
+							<a
+								href="./help.html"
+								class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+								>Help</a
+							>
+						</li>
+						<li>
 							<div
 								x-data="{ open: false }"
 								@mouseleave="open = false"
