Added New Section i.e  Pet Care

--- a/index.html
+++ b/index.html
@@ -100,6 +100,16 @@
 								>Pet News</a
 							>
 						</li>
+
+						<li>
+							<a
+								href="./care.html"
+								class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+								>Pet Care</a
+							>
+						</li>
+
+
 						<li>
 							<a
 								href="./blog.html"
