--- a/news.html
+++ b/news.html
@@ -49,6 +49,9 @@
                         </li>
                         <li><a href="./news.html" class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Pet News</a>
                         </li>
+                    </li>
+                    <li><a href="./care.html" class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Pet Care</a>
+                    </li>
                         <li><a href="./blog.html" class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Blogs</a>
                         </li>
                         <li><a href="./donate.html" class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Donate
