--- a/reportstary.html
+++ b/reportstary.html
@@ -63,6 +63,9 @@
           <li><a href="news.html"
             class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Pet News</a>
           </li>
+          <li><a href="care.html"
+            class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Pet Care</a>
+          </li>
           <li><a href="blog.html"
               class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Blogs</a>
           </li>
