move it to the top for better visibility

--- a/index.html
+++ b/index.html
@@ -214,7 +214,16 @@
 			</div>
 		</div>
 
-
+		<!-- Scroll to top -->
+		<div class="md:pr-8">
+			<a href="#top">
+				<button id="bttbutton" title="backtotop">
+					<img alt="scroll-to-top-feature" src="./Assets/Images/uparrow.png" class="w-6 md:w-10"/>
+				</button>
+			</a>
+		</div>
+		<!-- Scroll to top -->
+		
 			<!-- SOS button -->
 			<div>
 				<form action="./reportstary.html" method="get" target="_blank">
@@ -874,15 +883,7 @@
 				</div>
 				<!-- Social icons end -->
 
-				<!-- Scroll to top -->
-				<div class="md:pr-8">
-					<a href="#top">
-						<button id="bttbutton" title="backtotop">
-							<img src="./Assets/Images/uparrow.png" class="w-6 md:w-10"/>
-						</button>
-					</a>
-				</div>
-				<!-- Scroll to top -->
+				
 			</div>
 
 			<div
