remove styling width

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 		<div class="md:pr-8">
 			<a href="#top">
 				<button id="bttbutton" title="backtotop">
-					<img alt="scroll-to-top-feature" src="./Assets/Images/uparrow.png" class="w-6 md:w-10"/>
+					<img alt="scroll-to-top-feature" src="./Assets/Images/uparrow.png"/>
 				</button>
 			</a>
 		</div>
