improved volunteer page

--- a/volunteer.html
+++ b/volunteer.html
@@ -20,9 +20,13 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <title>Become a Volunteer : PetMe</title>
     <style>
+        #top{
+            margin-top: 50px;
+        }
+
         #survey-form{
             /* border: 1px solid black; */
-            padding-top: 50px;
+            padding-top: 10px;
             padding-bottom: 50px;
             border-radius: 20px;
             margin: 50px;
@@ -126,7 +130,7 @@
     <section class="text-gray-600 body-font relative bg-[url('Assets/Images/pet-don.jpg')] bg-center bg-no-repeat
         bg-cover">
         <div class="container px-5 py-24 mx-auto card backdrop-blur-sm">
-            <div class="flex flex-col text-center w-full mb-12">
+            <div id="top" class="flex flex-col text-center w-full mb-12">
                 <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">
                     Thanks for showing your support
                 </h1>
