fixed toggle image responsiveness in index.html

--- a/index.html
+++ b/index.html
@@ -183,12 +183,12 @@
 								</button>
 							</a>
 						</li>
-						<li>
+						<div class="toggleimage" style="max-width: 50px;">
 							<a id="theme-toggle">
 
 							<img src="Assets/Images/sun.svg" width="50px" id="switch"/>
 							</a>
-						</li>
+						</div>
 						<!-- google translate -->
 						<div id="google_translate_element">
 							<script
