--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 						</li>
 						<li>
 							<a
-								href="./news.html"
+								href="./news1.html"
 								class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
 								>Pet News</a
 							>
