--- a/donate.html
+++ b/donate.html
@@ -83,13 +83,6 @@
         <li>
           <a href="./index.html" class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Home</a>
         </li>
-        <li>
-          <a href="#adopt" class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Meet Pets</a>
-        </li>
-        <li>
-          <a href="#About" class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">About Us</a>
-        </li>
-        <li>
           <a href="./news.html" class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Pet News</a>
         </li>
         <li>
@@ -115,16 +108,6 @@
           <a href="./reportstary.html" class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">SOS Report</a>
         </li>
         <li>
-          <a href="#contact">
-          <button class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-base px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-0">
-            Contact Us
-            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
-            <path d="M5 12h14M12 5l7 7-7 7"></path>
-            </svg>
-          </button>
-          </a>
-        </li>
-        <li>
           <a id="theme-toggle">
           <img src="Assets/Images/sun.svg" width="50px" id="switch"/>
           </a>
@@ -142,7 +125,7 @@
         bg-cover donate-section">
     <div class="container px-5 py-24 mx-auto card backdrop-blur-sm">
       <div class="flex flex-col text-center w-full mb-12">
-        <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">
+        <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900" style="padding-top: 15px;">
           Donate Animals
         </h1>
         <p class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-90">
