Modified  support page

--- a/volunteer.html
+++ b/volunteer.html
@@ -109,7 +109,7 @@
 
     <section class="text-gray-600 body-font relative bg-[url('Assets/Images/pet-don.jpg')] bg-center bg-no-repeat
         bg-cover">
-        <div class="container px-5 py-24 mx-auto card backdrop-blur-sm">
+        <div class="container  px-5 py-24 mx-auto card backdrop-blur-sm" style="margin-top: 10vh">
             <div class="flex flex-col text-center w-full mb-12">
                 <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">
                     Thanks for showing your support
@@ -189,7 +189,7 @@
                         </div>
                         <div class="p-4 w-full">
                             <button type="submit"
-                                class="flex mx-auto text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">
+                                class="flex mx-auto text-white bg-indigo-500 border-0 py-2 px-8 ">
                                 Submit
                             </button>
                         </div>
