updated the reportstary.html file

--- a/reportstary.html
+++ b/reportstary.html
@@ -56,9 +56,9 @@
         >
           <li>
             <a
-              href="#About"
+              href="./index.html"
               class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
-              >About Us</a
+              >Home</a
             >
           </li>
           <li>
