--- a/reportstary.html
+++ b/reportstary.html
@@ -261,9 +261,21 @@
 
     </form>
   </div>
+  <button class="help_btn">Help</button>
+
+  <dialog id="popup" class="popup" style="display:none">
+        <div class="Head">
+          <h1 class="Head_text">Get Help</h1>
+          <button id="close" aria-label="close" formnovalidate>X</button>
+        </div>
+        <h2 class="subHead">search a city name and find pet care centers there</h2>
+        <input placeholder="Get info of Pet Clinics" type="text" id="input" name="input" onkeydown="if (event.keyCode === 13) document.getElementById('myButton').click()">
+        <button id="GoButton">Go</button>
+  </dialog>
 
   <script src="./navbar.js"></script>
   <script src="./light-dark-theme.js"></script>
+  <script src="reportstary.js"></script>
 </body>
 
 </html>
