copy right footer is added

--- a/news.html
+++ b/news.html
@@ -283,6 +283,9 @@
 					</div>
 				</div>
 			</div>
+			<div id="copyright">
+				<p>&copy;[2022] [PetMe] All Right Reserved.</p>
+			</div>
 		</footer>
 		<script src="index.js"></script>
 		<script src="navbar.js"></script>
