--- a/index.html
+++ b/index.html
@@ -937,7 +937,11 @@
 					</div>
 				</div>
 			</div>
+			
 		</footer>
+		<div id="copyright">
+			<p>&copy;[2022] [PetMe] All Right Reserved.</p>
+		</div>
 		<script src="index.js"></script>
 		<script src="navbar.js"></script>
 		<script src="light-dark-theme.js"></script>
