--- a/blog.html
+++ b/blog.html
@@ -218,7 +218,7 @@
       </div>
     </div>
     <div id="copyright">
-			<p>&copy;[2022] [PetMe] All Right Reserved.</p>
+			<p>Copyright &copy; 2022 [PetMe] All Right Reserved.</p>
 		</div>
   </footer>
 
