--- a/news.html
+++ b/news.html
@@ -284,7 +284,7 @@
 				</div>
 			</div>
 			<div id="copyright">
-				<p>&copy;[2022] [PetMe] All Right Reserved.</p>
+				<p>Copyright &copy; 2022 [PetMe] All Right Reserved.</p>
 			</div>
 		</footer>
 		<script src="index.js"></script>
