--- a/index.html
+++ b/index.html
@@ -937,11 +937,11 @@
 					</div>
 				</div>
 			</div>
-			
+			<div id="copyright">
+				<p>Copyright &copy; 2022 [PetMe] All Right Reserved.</p>
+			</div>
 		</footer>
-		<div id="copyright">
-			<p>&copy;[2022] [PetMe] All Right Reserved.</p>
-		</div>
+		
 		<script src="index.js"></script>
 		<script src="navbar.js"></script>
 		<script src="light-dark-theme.js"></script>
