--- a/index.html
+++ b/index.html
@@ -878,7 +878,7 @@
 				<div class="md:pr-8">
 					<a href="#top">
 						<button id="bttbutton" title="backtotop">
-							<img src="./Assets/Images/uparrow.png" class="w-6 md:w-10"/>
+							<img src="./Assets/Images/uparrow.png" class="w-6 md:w-10 md:object-left"/>
 						</button>
 					</a>
 				</div>
