Added hover effects to the button

--- a/volunteer.html
+++ b/volunteer.html
@@ -187,12 +187,14 @@
                                 I've read and agree to the Terms and Conditions for volunteering this organisation.
                             </span>
                         </div>
-                        <div class="p-4 w-full">
-                            <button type="submit"
-                                class="flex mx-auto text-white bg-indigo-500 border-0 py-2 px-8 ">
-                                Submit
-                            </button>
-                        </div>
+                    </div>
+                    <div class="p-4 w-full">
+                        <button type="submit" class="flex mx-auto text-white bg-indigo-500 border-0 py-2 px-8 rounded-md cursor-pointer hover:bg-indigo-600">
+                            Submit
+                        </button>
+                    </div>
+                    
+                    
                     </div>
                 </div>
             </form>
