improved UI of index page

--- a/index.html
+++ b/index.html
@@ -168,16 +168,16 @@
 		</section>
 		<!-- About session  html starts from here -->
 
-		<section class="bg-white dark:bg-gray-900 b_1">
+		<section class="bg-white dark:bg-gray-900 b_1 shadow-2xl">
 			<div class="py-8 lg:py-16 px-4 mx-auto max-w-screen-md">
 				<p id="About"></p>
 				<h2
-					class="mb-4 text-4xl tracking-tight font-extrabold text-center text-gray-900 dark:text-white text_3"
+					class="mb-8 text-6xl tracking-tight hover:overline antialiased font-extrabold text-center text-gray-900 dark:text-white text_3"
 				>
 					About Us
 				</h2>
 				<p
-					class="mb-8 lg:mb-16 font-light text-center text-gray-500 dark:text-gray-400 sm:text-xl text_4"
+					class="mb-8 lg:mb-16 antialiased hover:subpixel-antialiased font-light text-center text-gray-500 dark:text-gray-400 sm:text-xl text_4"
 				>
 					Our mission is to provide a platform that connects animal lovers with pets in need of a forever home, while also providing emergency medical care for stray animals in distress. We strive to make a difference in the lives of these innocent creatures by offering options to
 					<a class="hover-underline-animation" href="#adopt"
@@ -195,13 +195,18 @@
 		</section>
 
 		<!-- About Us section  html ends here -->
-		<div class="heading" id="adopt">
-			<h1 class="meet-heading">Meet our Friends Here</h1>
-		</div>
+	
+		
 
 		<section class="pet-card-flex">
+			<br>
+			<br>
+			<div>
+				<h1 class="m-heading hover:shadow-2xl antialiased hover:subpixel-antialiased" >Meet our Friends Here</h1>
+			</div>
+			<br>
 			<div class="one-line-card">
-				<div class="main-card card-height">
+				<div class="main-card card-height shadow-2xl">
 					<div class="main-img">
 						<div class="hv rounded-lg shadow-lg max-w-xs card-img-div">
 							<a href="#">
@@ -253,7 +258,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="main-card card-height">
+				<div class="main-card card-height shadow-2xl">
 					<div class="main-img">
 						<div class="hv rounded-lg shadow-lg max-w-xs card-img-div">
 							<a href="#">
@@ -304,7 +309,7 @@
 				</div>
 			</div>
 			<div class="one-line-card">
-				<div class="main-card card-height">
+				<div class="main-card card-height shadow-2xl">
 					<div class="main-img">
 						<div class="hv rounded-lg shadow-lg max-w-xs card-img-div">
 							<a href="#">
@@ -357,7 +362,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="main-card card-height">
+				<div class="main-card card-height shadow-2xl">
 					<div class="main-img">
 						<div class="hv rounded-lg shadow-lg max-w-xs card-img-div">
 							<a href="#">
@@ -464,7 +469,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="main-card card-height">
+				<div class="main-card card-height shadow-2xl">
 					<div class="main-img">
 						<div class="hv rounded-lg shadow-lg max-w-xs card-img-div">
 							<a href="#">
@@ -531,7 +536,7 @@
 							</a>
 						</div>
 					</div>
-					<div class="main-text">
+					<div class="main-text shadow-xl">
 						<div class="p-4 flex flex-col gap-2">
 							<h5 class="text_3 md:text-[40px] font-bold mb-2 text-center">
 								Sheru
@@ -572,7 +577,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="main-card card-height">
+				<div class="main-card card-height shadow-2xl">
 					<div class="main-img">
 						<div class="hv rounded-lg shadow-lg card-img-div">
 							<a href="#">
@@ -799,7 +804,7 @@
 
 		<!-- Footer section  -->
 
-		<footer class="bg-black text-white">
+		<footer class="bg-black text-white shadow-inner">
 			<div class="flex p-5 justify-between">
 				<div
 					class="flex flex-1 flex-col text-center sm:flex-row items-center justify-center space-x-3"
@@ -837,7 +842,7 @@
 								placeholder="Enter your email address"
 							/>
 							<button
-								class="bg-red-600 hover:bg-red-500 text-white py-2 px-4 rounded-md"
+								class="bg-yellow-600 hover:bg-red-500 text-white py-2 px-4 rounded-md"
 								type="submit"
 							>
 								Subscribe
