fix: overlapping buttons

--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
 		</div>
 
 		<!-- Scroll to top -->
-		<div class="md:pr-8">
+		<!-- <div class="md:pr-8">
 			<a href="#top">
 				<button id="bttbutton" title="backtotop">
 					<img alt="scroll-to-top-feature" src="./Assets/Images/uparrow.png"/>
 				</button>
 			</a>
-		</div>
+		</div> -->
 		<!-- Scroll to top -->
 		
 			<!-- SOS button -->
