--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 					</li>
 					<li>
 					  <a href="#contact">
-						<button class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-base px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-0">
+						<button class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-choco text-base px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-0">
 						  Contact Us
 						  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
 							<path d="M5 12h14M12 5l7 7-7 7"></path>
