fix: 'meet up' button in navbar

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					  <a href="./index.html" class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Home</a>
 					</li>
 					<li>
-					  <a href="#adopt" class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Meet Pets</a>
+					  <a href="#meet" class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Meet Pets</a>
 					</li>
 					<li>
 					  <a href="#About" class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">About Us</a>
@@ -205,7 +205,7 @@
 				<h1 class="m-heading hover:shadow-2xl antialiased hover:subpixel-antialiased" >Meet our Friends Here</h1>
 			</div>
 			<br>
-			<div class="one-line-card">
+			<div class="one-line-card" id="meet">
 				<div class="main-card card-height shadow-2xl">
 					<div class="main-img">
 						<div class="hv rounded-lg shadow-lg max-w-xs card-img-div">
