2 pet news added

--- a/news.html
+++ b/news.html
@@ -126,6 +126,34 @@
                 <span style="padding:20px;text-align: justify;font-family: 'Josefin Sans', sans-serif;color:white;"><strong>Measuring at 3.59 inches tall and just five inches in length, Pearl is shorter than a popsicle stick and around the same size as a dollar bill, according to the Guinness World Records. When the chihuahua was born in September 2020 at Crystal
                     Creek Animal Hospital in Orlando, Florida, she weighed less than an ounce at birth.</strong></span>
 	    </div>
+
+		<div class="relative w-[17.5rem] sm:w-[15.5rem] md:w-[19rem] lg:w-[27rem] xl:w-[35rem] h-80 flex justify-center items-center flex-col opacity-80" style="display: flex;border-radius: 4px;align-items: center;justify-content: center;position:relative;box-shadow: #ddd;margin: auto;width: fit-content;height:min-content;padding-bottom:5%;padding-right:8%;background-color:#86412d4d;">
+			<h1 class="text-3xl mt-28 ml-10" style="color:white;"><strong>Viral Video: Pet Dog goes Paragliding with owner, netizens react</strong></h1>
+		</div>
+		<div class="text-lg ml-10 mt-8 sm:mb-28 sm:w-10/12  flex sm:flex-row flex-col" style="display: flex;border-radius: 4px;padding: 5px;align-items: center;justify-content: center;position:relative;box-shadow: #ddd;margin: auto;background-color:#090a0a4d;max-width:95%">
+		
+			<img class="relative ml-14 w-56 h-56  object-cover rounded-2xl shadow-lg shadow-red-700/50 " src="Assets/Images/petnews3.png" style="margin-top: 5px;margin-bottom: 5px;">
+		
+
+		
+			<span style="padding:20px;text-align: justify;font-family: 'Josefin Sans', sans-serif;color:white;"><strong>Many social media users are outraged after seeing a video of a dog paragliding with its owner. 
+				The now-viral Instagram video demonstrates the four-legged furry ball being properly tethered for flight together with its owner. The man used a GoPro to capture the entire journey. 
+				The pair paragliding was included in a few wide Instagram Reels photos as well. They successfully touched down on the ground at the end of the video. </strong></span>
+	</div>
+
+	<div class="relative w-[17.5rem] sm:w-[15.5rem] md:w-[19rem] lg:w-[27rem] xl:w-[35rem] h-80 flex justify-center items-center flex-col opacity-80" style="display: flex;border-radius: 4px;align-items: center;justify-content: center;position:relative;box-shadow: #ddd;margin: auto;width: fit-content;height:min-content;padding-bottom:5%;padding-right:8%;background-color:#86412d4d;">
+		<h1 class="text-3xl mt-28 ml-10" style="color:white;"><strong>This 'intelligent' dog's digging skills goes viral, netizens say can solve Suez Canal blockade</strong></h1>
+	</div>
+	<div class="text-lg ml-10 mt-8 sm:mb-28 sm:w-10/12  flex sm:flex-row flex-col" style="display: flex;border-radius: 4px;padding: 5px;align-items: center;justify-content: center;position:relative;box-shadow: #ddd;margin: auto;background-color:#090a0a4d;max-width:95%">
+	
+		<img class="relative ml-14 w-56 h-56  object-cover rounded-2xl shadow-lg shadow-red-700/50 " src="Assets/Images/petnews4.png" style="margin-top: 5px;margin-bottom: 5px;">
+	
+
+	
+		<span style="padding:20px;text-align: justify;font-family: 'Josefin Sans', sans-serif;color:white;"><strong>A new hilarious video of an Australian cattle dog is going viral on social media, it is an energetic dog who seems good at digging an irrigation trench and guiding water. 
+			The 59-second video was uploaded on a Twitter page, named, 'Humour and Animals', that shared the video of a dog digging the water channel.  </strong></span>
+</div>
+
 				
         </div>
 
