Made the changes, Fixed About Us scroll

--- a/index.html
+++ b/index.html
@@ -170,12 +170,12 @@
 			<div class="py-8 lg:py-16 px-4 mx-auto max-w-screen-md">
 				<p id="About"></p>
 				<h2
-					class="mb-8 text-6xl tracking-tight hover:overline antialiased font-extrabold text-center text-gray-900 dark:text-white text_3"
+					class="mb-8 text-7xl tracking-tight hover:overline antialiased font-extrabold text-center text-gray-900 dark:text-white text_3" style="padding-top: 120px; padding-bottom: 25px;"
 				>
 					About Us
 				</h2>
 				<p
-					class="mb-8 lg:mb-16 font-light text-center text-gray-500 dark:text-gray-400 sm:text-xl text_4"
+					class="mb-8 lg:mb-16 font-light text-center text-gray-500 dark:text-gray-400 sm:text-2xl text_6"
 				>
 					Our mission is to provide a platform that connects animal lovers with pets in need of a forever home, while also providing emergency medical care for stray animals in distress. We strive to make a difference in the lives of these innocent creatures by offering options to
 					<a class="hover-underline-animation" href="#adopt"
